# WhisperSwiftAppEx

./: .gitignore  CMakeLists.txt  main.swift
.cursor/rules/: commit-message.mdc
Sources/: WhisperWrapper.cpp
Tests/: test_transcribe.cpp
WhisperSwiftApp/: ContentView.swift  WhisperManager.swift  WhisperSwiftApp-Bridging-Header.h  WhisperSwiftAppApp.swift  transcribe.c  whisper_wrapper.h
WhisperSwiftApp.xcodeproj/: project.pbxproj
libwhisper/: .gitignore  CMakeLists.txt  README.md
libwhisper/src/: whisper_wrapper.cpp
libwhisper/tests/: test_transcribe.cpp
